// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering works 1`] = `
<span
  class="dino-NodeView-Wrap"
  data-dinokind="brontosaurus"
  data-type="dino"
  draggable="true"
  style="display: inline-block;"
>
  <span
    contenteditable="false"
  >
    <img
      alt="brontosaurus"
      class="plugins_dino"
      contenteditable="false"
      src="test-file-stub"
    />
  </span>
</span>
`;

exports[`Rendering works with different type of dino 1`] = `
<span
  class="dino-NodeView-Wrap"
  data-dinokind="stegosaurus"
  data-type="dino"
  draggable="true"
  style="display: inline-block;"
>
  <span
    contenteditable="false"
  >
    <img
      alt="stegosaurus"
      class="plugins_dino"
      contenteditable="false"
      src="test-file-stub"
    />
  </span>
</span>
`;
